refactor: 优化 collect(Collectors.toList())