@@ -86,44 +86,44 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 @Service("ddlMetaService")
 public class DdlMetaServiceImpl implements DdlMetaService {
-    
+
     @Autowired
     private PropertyResolver propertyResolver;
-    
+
     @Autowired
     private FrameServiceService frameServiceService;
-    
+
     @Autowired
     private FrameServiceRoleService roleService;
-    
+
     @Autowired
     private FrameInfoService frameInfoService;
-    
+
     @Autowired
     private ClusterInfoService clusterInfoService;
-    
+
     @Autowired
     private ClusterServiceInstanceService serviceInstanceService;
-    
+
     @Autowired
     private ClusterServiceRoleInstanceService clusterServiceRoleInstanceService;
-    
+
     @Autowired
     private ClusterServiceInstanceRoleGroupService roleGroupService;
-    
+
     @Autowired
     private ClusterServiceRoleGroupConfigService roleGroupConfigService;
-    
+
     @Autowired
     private Validator validator;
-    
+
     @Autowired
     private FrameK8sServiceService frameK8sServiceService;
-    
+
     private static final String HDFS = "HDFS";
-    
+
     private static final String HADOOP = "HADOOP";
-    
+
     /**
      * 内存数据无法回滚，在新的事务提交，防止外部事务回滚
      */
@@ -135,7 +135,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         }
         FrameInfoEntity entity = frameInfoService.saveFrameIfAbsent(frameCode);
         log.info("使用框架模板{}初始化框架{}", FileUtil.file(FRAMEWORK_TPL).getAbsolutePath(), entity.getFrameCode());
-        
+
         File tplDir = FileUtil.file(FRAMEWORK_TPL);
         MetaStorage metaStorage = StorageUtils.getMetaStorage();
         try {
@@ -145,7 +145,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         }
         List<String> installingCmp = Arrays.stream(Objects.requireNonNull(tplDir.listFiles(File::isDirectory)))
                 .map(File::getName)
-                .collect(Collectors.toList());
+                .toList();
         List<ClusterInfoEntity> clusters = clusterInfoService.list();
         for (String cmp : installingCmp) {
             ServiceMetaItem item = new ServiceMetaItem();
@@ -160,12 +160,12 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         }
         return entity;
     }
-    
+
     @Override
     public FrameServiceEntity loadServicePhysicalDdl(List<ClusterInfoEntity> clusters, FrameInfoEntity frameInfo, String serviceName, String serviceDdl) {
         ServiceInfo serviceInfo = JSONObject.parseObject(serviceDdl, new TypeReference<ServiceInfo>() {
         });
-        
+
         if (StrUtil.isNotBlank(serviceName)) {
             if (!serviceName.equals(serviceInfo.getName())) {
                 throw new IllegalStateException(String.format("服务名称%s与ddl定义的不一致", serviceName));
@@ -193,7 +193,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
             }
         }
         log.info("arch:{}", serviceInfo.getArch());
-        
+
         // save service config
         List<ServiceConfig> allParameters = serviceInfo.getParameters();
         Map<String, ServiceConfig> map = allParameters.stream().collect(
@@ -205,14 +205,14 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         String representativeDcp = representativeDecompressPackageName(serviceInfo);
         PackageUtils.putServicePackageName(frameInfo.getFrameCode(), serviceName, representativeDcp);
         putServiceHomeToVariable(frameInfo.getFrameCode(), clusters, serviceName, representativeDcp);
-        
+
         // save service and service config
         FrameServiceEntity serviceEntity = saveFrameService(frameInfo, serviceName, serviceDdl, serviceInfo, configFileMap);
         // save frame service role
         saveFrameServiceRole(frameInfo.getFrameCode(), serviceName, serviceInfo, serviceEntity);
         return serviceEntity;
     }
-    
+
     /**
      * @deprecated 解决完HADOOP_HOME后，可以去掉该方法的调用
      */
@@ -228,7 +228,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
             }
         }
     }
-    
+
     /**
      * 从 arch 块中取代表性 decompressPackageName（优先 "common"，否则取第一个非空值）。
      * 用于向无架构上下文的消费者（PackageUtils、SERVICE_HOME、DB 实体列）提供单值。
@@ -246,10 +246,10 @@ public class DdlMetaServiceImpl implements DdlMetaService {
                 .findFirst()
                 .orElse(null);
     }
-    
+
     private void saveFrameServiceRole(String frameCode, String serviceName, ServiceInfo serviceInfo, FrameServiceEntity serviceEntity) {
         List<ServiceRoleInfo> serviceRoles = serviceInfo.getRoles();
-        
+
         for (int i = 0; i < serviceRoles.size(); i++) {
             ServiceRoleInfo serviceRole = serviceRoles.get(i);
             serviceRole.setParentName(serviceName);
@@ -278,7 +278,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         log.info("put {} {} service info into cache", frameCode, serviceName);
         ServiceInfoMap.put(frameCode + Constants.UNDERLINE + serviceName, serviceInfo);
     }
-    
+
     private FrameServiceEntity saveFrameService(FrameInfoEntity frameInfo, String serviceName, String serviceDdl,
                                                 ServiceInfo serviceInfo, Map<Generators, List<ServiceConfig>> configFileMap) {
         List<ServiceConfig> allParameters = serviceInfo.getParameters();
@@ -302,13 +302,13 @@ public class DdlMetaServiceImpl implements DdlMetaService {
                 frameServiceService.updateById(serviceEntity);
             }
         }
-        
+
         ServiceConfigMap.put(frameInfo.getFrameCode() + Constants.UNDERLINE + serviceInfo.getName() + Constants.CONFIG, allParameters);
         ServiceConfigFileMap.put(frameInfo.getFrameCode() + Constants.UNDERLINE + serviceInfo.getName() + Constants.CONFIG_FILE, configFileMap);
-        
+
         return serviceEntity;
     }
-    
+
     private Map<Generators, List<ServiceConfig>> buildConfigFileMap(ServiceInfo serviceInfo, Map<String, ServiceConfig> map) {
         Map<Generators, List<ServiceConfig>> configFileMap = new HashMap<>();
         ConfigWriter configWriter = serviceInfo.getConfigWriter();
@@ -317,8 +317,8 @@ public class DdlMetaServiceImpl implements DdlMetaService {
                 return propertyResolver.getProperty(g.getConditionalOnProperty(), boolean.class, false);
             }
             return true;
-        }).collect(Collectors.toList());
-        
+        }).toList();
+
         for (Generators generator : generators) {
             List<ServiceConfig> list = new ArrayList<>();
             List<String> includeParams = generator.getIncludeParams();
@@ -336,10 +336,10 @@ public class DdlMetaServiceImpl implements DdlMetaService {
                 configFileMap.put(generator, list);
             }
         }
-        
+
         return configFileMap;
     }
-    
+
     private void updateServiceInstanceConfig(String frameCode, String serviceName, List<ServiceConfig> parameters) {
         // 查询frameCode相同的集群
         List<ClusterInfoEntity> clusters = clusterInfoService.getClusterByFrameCode(frameCode);
@@ -349,10 +349,10 @@ public class DdlMetaServiceImpl implements DdlMetaService {
             if (serviceInstance == null) {
                 continue;
             }
-            
+
             ClusterServiceRoleGroupConfig config = roleGroupService.getRoleGroupConfigByServiceId(serviceInstance.getId());
             updateServiceRoleGroupConfig(config, parameters);
-            
+
             Integer roleGroupId = (Integer) CacheUtils.get("UseRoleGroup_" + serviceInstance.getId());
             if (roleGroupId != null) {
                 ClusterServiceRoleGroupConfig cacheConfig = roleGroupConfigService.getConfigByRoleGroupId(roleGroupId);
@@ -360,7 +360,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
                     updateServiceRoleGroupConfig(config, parameters);
                 }
             }
-            
+
             clusterServiceRoleInstanceService.lambdaUpdate()
                     .eq(ClusterServiceRoleInstanceEntity::getServiceId, serviceInstance.getId())
                     .eq(ClusterServiceRoleInstanceEntity::getRoleGroupId, config.getRoleGroupId())
@@ -368,7 +368,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
                     .update();
         }
     }
-    
+
     private void updateServiceRoleGroupConfig(ClusterServiceRoleGroupConfig config, List<ServiceConfig> parameters) {
         String configJson = config.getConfigJson();
         List<ServiceConfig> serviceConfigs = JSONArray.parseArray(configJson, ServiceConfig.class);
@@ -377,7 +377,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         config.setConfigJson(JSONObject.toJSONString(serviceConfigs));
         roleGroupConfigService.updateById(config);
     }
-    
+
     private void buildServiceEntity(FrameInfoEntity frameInfo, String serviceName, String serviceDdl,
                                     ServiceInfo serviceInfo, String serviceInfoMd5, FrameServiceEntity serviceEntity,
                                     Map<Generators, List<ServiceConfig>> configFileMap) {
@@ -398,11 +398,11 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         serviceEntity.setSortNum(serviceInfo.getSortNum());
         serviceEntity.setType(serviceInfo.getType());
     }
-    
+
     @Override
     public FrameK8sServiceEntity loadServiceK8sDdl(FrameInfoEntity frameInfo, String serviceName, String serviceDdl) {
         K8sServiceInfo serviceInfo = YamlUtils.parseYaml(serviceDdl, K8sServiceInfo.class);
-        
+
         if (StrUtil.isNotBlank(serviceName)) {
             if (!serviceName.equals(serviceInfo.getName())) {
                 throw new BusinessHintException(String.format("服务名称%s与ddl定义的不一致", serviceName));
@@ -422,14 +422,14 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         if (supportArtifacts.isEmpty()) {
             throw new BusinessHintException("服务%s的manifest文件不规范，artifact字段，至少支持一种部署方式");
         }
-        
+
         Set<ConstraintViolation<K8sServiceInfo>> errors = validator.validate(serviceInfo);
         if (!errors.isEmpty()) {
             List<String> errorList = new ArrayList<>();
             errors.forEach(e -> errorList.add(e.getMessage()));
             throw new BusinessHintException(String.format("服务%s的manifest文件不规范，存在错误:\n%s", serviceName, StrUtil.join(";", errorList)));
         }
-        
+
         FrameK8sServiceEntity entity = frameK8sServiceService.lambdaQuery()
                 .eq(FrameK8sServiceEntity::getFrameId, frameInfo.getId())
                 .eq(FrameK8sServiceEntity::getServiceName, serviceName)
@@ -448,10 +448,10 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         entity.setSupportArtifacts(supportArtifacts);
         entity.setServiceVersion(serviceInfo.getVersion());
         frameK8sServiceService.saveOrUpdate(entity);
-        
+
         return entity;
     }
-    
+
     @Override
     public void updateServicePhysicalDdl(Integer serviceId, String serviceDdl) {
         FrameServiceEntity service = frameServiceService.getById(serviceId);
@@ -459,7 +459,7 @@ public class DdlMetaServiceImpl implements DdlMetaService {
         FrameInfoEntity frameInfo = frameInfoService.getById(service.getFrameId());
         List<ClusterInfoEntity> clusters = clusterInfoService.list();
         loadServicePhysicalDdl(clusters, frameInfo, service.getServiceName(), serviceDdl);
-        
+
         ServiceMetaItem item = new ServiceMetaItem();
         item.setServiceName(service.getServiceName());
         item.setType(MetaStorage.PHYSICAL);
@@ -471,13 +471,13 @@ public class DdlMetaServiceImpl implements DdlMetaService {
             throw new IllegalStateException(String.format("IO异常，%s", e.getMessage()), e);
         }
     }
-    
+
     @Override
     public String getServicePhysicalDdl(Integer serviceId) {
         FrameServiceEntity service = frameServiceService.getById(serviceId);
         Objects.requireNonNull(service);
         FrameInfoEntity frameInfo = frameInfoService.getById(service.getFrameId());
-        
+
         ServiceMetaItem item = new ServiceMetaItem();
         item.setServiceName(service.getServiceName());
         item.setType(MetaStorage.PHYSICAL);
@@ -489,5 +489,5 @@ public class DdlMetaServiceImpl implements DdlMetaService {
             throw new IllegalArgumentException(String.format("服务%s的定义不存在", service.getServiceName()));
         }
     }
-    
+
 }
