@@ -45,11 +45,8 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import javax.crypto.BadPaddingException;
-
-import lombok.Data;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -62,64 +59,65 @@ import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.util.RandomUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.crypto.CryptoException;
+import lombok.Data;
 
 /**
  * @author zhanghuangbin
  */
 @Service("extRepoMetaService")
 public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
-    
+
     private static final Logger log = LoggerFactory.getLogger(ExtRepoMetaServiceImpl.class);
-    
+
     private final Map<Integer, ImportCompProgressVO> importCmpMap = new ConcurrentHashMap<>();
-    
+
     @Autowired
     private UploadTempFileService uploadTempFileService;
-    
+
     @Autowired
     private FrameInfoService frameInfoService;
-    
+
     @Autowired
     private DdlMetaService ddlMetaService;
-    
+
     @Autowired
     private ClusterInfoService clusterInfoService;
-    
+
     @Autowired
     private FrameServiceService frameServiceService;
-    
+
     @Autowired
     private TransactionalUtils transactionalUtils;
-    
+
     @Autowired
     private FrameK8sServiceService frameK8sServiceService;
-    
+
     @Override
     public ValidateResultVO validMetaFile(InstallComponentDTO dto) {
         return unzipMetaFile(dto, unzipDir -> {
             MetaParseOption option = new MetaParseOption();
             option.setRoot(unzipDir);
             ExtRepoMetaFsModel model = MetaUtils.parseRepoMeta(option);
-            
+
             SrvDependenciesContext ctx = new SrvDependenciesContext();
-            List<String> frames = model.getFrameworks().stream().map(FrameworkMeta::getFrameCode).collect(Collectors.toList());
+            List<String> frames = model.getFrameworks().stream().map(FrameworkMeta::getFrameCode).toList();
             List<FrameInfoEntity> frameDbs = frameInfoService.lambdaQuery().in(FrameInfoEntity::getFrameCode, frames).list();
-            
+
             List<FrameServiceEntity> installedSrv = frameServiceService.listSimpleService(frames);
             ctx.addService(installedSrv);
             model.getFrameworks().stream()
                     .flatMap(f -> f.getPhysicalDdlServices().stream())
                     .forEach(srv -> ctx.addPhysicalService(srv.getFrameCode(), srv.getName()));
-            
+
             List<String> errors = new ArrayList<>();
             model.getFrameworks().stream().flatMap(f -> f.getPhysicalDdlServices().stream()).forEach(srv -> {
                 errors.addAll(ctx.validPhysicalDdlDependency(srv));
             });
-            
+
             Map<Integer, FrameInfoEntity> map = CollectionUtil.toMap(frameDbs, new HashMap<>(), FrameInfoEntity::getId);
-            List<FrameK8sServiceEntity> installedK8sSrv = frameK8sServiceService.listSimpleService(frameDbs.stream().map(FrameInfoEntity::getId).collect(Collectors.toList()));
+            List<FrameK8sServiceEntity> installedK8sSrv = frameK8sServiceService.listSimpleService(frameDbs.stream().map(FrameInfoEntity::getId).toList());
             installedK8sSrv.forEach(srv -> ctx.addK8sService(map.get(srv.getFrameId()).getFrameCode(), srv.getServiceName()));
-            
+
             model.getFrameworks().stream().flatMap(f -> f.getK8sDdLServices().stream()).forEach(srv -> ctx.addK8sService(srv.getFrameCode(), srv.getName()));
             model.getFrameworks().stream().flatMap(f -> f.getK8sDdLServices().stream()).forEach(srv -> {
                 errors.addAll(ctx.validK8sDependency(srv));
@@ -127,7 +125,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             return new ValidateResultVO(errors);
         });
     }
-    
+
     private <T> T unzipMetaFile(InstallComponentDTO dto, Function<String, T> mapper) {
         File metaFile = uploadTempFileService.getTempFile(dto.getMeteFileId())
                 .orElseThrow(() -> new BusinessException("元信息文件不存在"));
@@ -135,7 +133,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         try {
             unzipDir = TarUtils.decompressToTemp(metaFile.getAbsolutePath());
             MetaUtils.decodeMatchedFiles(unzipDir, dto.getContentDecodePasswd());
-            
+
             return mapper.apply(unzipDir);
         } catch (CryptoException e) {
             if (e.getCause() instanceof BadPaddingException) {
@@ -151,7 +149,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             }
         }
     }
-    
+
     @Override
     public ValidateResultVO validatePkgFile(InstallComponentDTO dto) {
         // ExtRepoMetaFsModel model = unzipMetaFile(dto, unzipDir -> {
@@ -185,7 +183,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         // pms并不会将全部文件导出，不检查文件是否存在
         return new ValidateResultVO(new ArrayList<>(0));
     }
-    
+
     @Override
     @Transactional(rollbackFor = Exception.class)
     public ImportCompProgressVO importCmp(InstallComponentDTO dto) {
@@ -195,19 +193,19 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             uploadTempFileService.getTempFile(dto.getPkgFileId())
                     .orElseThrow(() -> new BusinessException("安装包文件不存在"));
         }
-        
+
         int progressId = RandomUtil.randomInt(1, Integer.MAX_VALUE);
         ImportCompProgressVO progress = new ImportCompProgressVO(progressId);
         importCmpMap.put(progressId, progress);
-        
+
         CompletableFuture.runAsync(() -> doImportCmp(dto, progress));
         return progress;
     }
-    
+
     private void doImportCmp(InstallComponentDTO dto, ImportCompProgressVO progress) {
         log.info("【导入第三方软件源】 进度ID:{}, 线程：{}, 开始执行", progress.getProgressId(), Thread.currentThread().getName());
         String error = null;
-        
+
         PathPair pathPair = new PathPair();
         try {
             transactionalUtils.doInNewTx(() -> {
@@ -217,14 +215,14 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
                         .orElseThrow(() -> new BusinessException("元信息文件不存在"));
                 String metaUnzipPath = unpackMetaFile(metaFile, dto, progress);
                 pathPair.setMetaUnzipPath(metaUnzipPath);
-                
+
                 MetaParseOption option = new MetaParseOption();
                 option.setRoot(metaUnzipPath);
                 ExtRepoMetaFsModel vo = MetaUtils.parseRepoMeta(option);
                 progress.setStep(9);
                 log.info("【导入第三方软件源】 进度ID:{}，解析meta数据成功，metaUnzipPath: {}, 解析到{}个服务", progress.getProgressId(),
                         metaUnzipPath, vo.getFrameworks().stream().mapToLong(fw -> fw.getPhysicalDdlServices().size()).sum());
-                
+
                 // 解压安装包
                 String pkgUnzipPath = null;
                 if (dto.getPkgFileId() != null) {
@@ -235,14 +233,14 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
                     pathPair.setPkgUnzipPath(pkgUnzipPath);
                     log.info("【导入第三方软件源】 进度ID:{}，解压软件安装包成功, 解压路径{}", progress.getProgressId(), pkgUnzipPath);
                 }
-                
+
                 // 保存数据
                 saveFrameInfo(metaUnzipPath, vo, progress);
                 log.info("【导入第三方软件源】 进度ID:{}，更新meta数据成功", progress.getProgressId());
-                
+
                 // 移动文件
                 moveFiles(metaUnzipPath, vo, pkgUnzipPath, progress);
-                
+
                 log.info("【导入第三方软件源】 进度ID:{}，移动安装安装文件成功", progress.getProgressId());
             });
         } catch (Exception e) {
@@ -266,13 +264,13 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             progress.setExpire(LocalDateTime.now().plusMinutes(5));
         }
     }
-    
+
     @Data
     private static class PathPair {
         private String metaUnzipPath;
         private String pkgUnzipPath;
     }
-    
+
     private String unpackMetaFile(File metaFile, InstallComponentDTO dto, ImportCompProgressVO progress) throws IOException {
         progress.setState(2);
         progress.setTotal(10);
@@ -281,18 +279,18 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         // 解密文件的内容
         MetaUtils.decodeMatchedFiles(unzipDir, dto.getContentDecodePasswd());
         progress.setStep(6);
-        
+
         return unzipDir;
     }
-    
+
     private String decompressPkgFile(File pkgFile, ExtRepoMetaFsModel vo, ImportCompProgressVO progress) throws IOException {
         progress.setState(3);
         progress.setStep(0);
         progress.setTotal(10);
-        
+
         String dir = TarUtils.decompressToTemp(pkgFile.getAbsolutePath());
         progress.setStep(10);
-        
+
         // 不在检查文件是否存在
         // Set<String> packageNames = vo.getFrameworks()
         // .stream()
@@ -322,15 +320,15 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         // }
         return dir;
     }
-    
+
     private void saveFrameInfo(String unzipDir, ExtRepoMetaFsModel vo, ImportCompProgressVO progress) {
         progress.setState(4);
-        
+
         long total = vo.getFrameworks().stream().mapToLong(f -> f.getPhysicalDdlServices().size()).sum()
                 + vo.getFrameworks().stream().mapToLong(f -> f.getK8sDdLServices().size()).sum();
         progress.setTotal(total);
         progress.setStep(0);
-        
+
         List<ClusterInfoEntity> clusters = clusterInfoService.list();
         vo.getFrameworks().forEach(framework -> {
             FrameInfoEntity db = ddlMetaService.initFramework(framework.getFrameCode());
@@ -341,10 +339,10 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
                 } catch (Exception e) {
                     throw new BusinessException(String.format("解析服务%s的定义失败，%s。请检测service_ddl.json是否符合定义", srv.getName(), e.getMessage()), e);
                 }
-                
+
                 progress.setStep(progress.getStep() + 1);
             });
-            
+
             framework.getK8sDdLServices().forEach(srv -> {
                 String ddl = FileUtil.readString(Paths.get(unzipDir, srv.getManifest()).toFile(), StandardCharsets.UTF_8);
                 try {
@@ -352,16 +350,16 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
                 } catch (Exception e) {
                     throw new BusinessException(String.format("解析服务%s的定义失败，%s。请检测manifest.yaml是否符合定义", srv.getName(), e.getMessage()), e);
                 }
-                
+
                 progress.setStep(progress.getStep() + 1);
             });
         });
     }
-    
+
     private void moveFiles(String metaUnzipPath, ExtRepoMetaFsModel vo, String pkgPath, ImportCompProgressVO progress) throws IOException {
         progress.setState(5);
         progress.setStep(0);
-        
+
         if (pkgPath == null) {
             progress.setTotal(1);
         } else {
@@ -369,11 +367,11 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             File[] files = pkgDir.listFiles();
             progress.setTotal(1 + (files == null ? 0 : files.length));
         }
-        
+
         MetaStorage metaStorage = StorageUtils.getMetaStorage();
         log.info("开始上传meta信息....");
         metaStorage.moveToStorage(PathUtils.join(metaUnzipPath, vo.getMeta()).toFile(), true);
-        
+
         PackageStorage packageStorage = StorageUtils.getPackageStorage();
         if (StrUtil.isNotBlank(vo.getTemplate())) {
             File dir = PathUtils.join(metaUnzipPath, vo.getTemplate()).toFile();
@@ -381,11 +379,11 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             packageStorage.moveToStorage(dir, true);
         }
         progress.setStep(1);
-        
+
         if (pkgPath == null) {
             return;
         }
-        
+
         File pkgDir = MetaUtils.getPkgPath(pkgPath).toFile();
         File[] rawPkgFiles = pkgDir.listFiles();
         if (rawPkgFiles != null) {
@@ -401,7 +399,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         }
         progress.setStep(progress.getTotal());
         log.info("【导入第三方软件源】 进度ID:{}，上传安装包到nexus成功", progress.getProgressId());
-        
+
         File imageDir = MetaUtils.getImagePath(pkgPath).toFile();
         List<File> imageFiles = FileUtil.loopFiles(imageDir);
         if (imageFiles.isEmpty()) {
@@ -413,7 +411,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         ImageStorage imageStorage = StorageUtils.getImageStorage();
         log.info("开始上传镜像文件...");
         imageStorage.pushImages(imageDir, new ImageStorage.PushCallback() {
-            
+
             @Override
             public void onEntryLoad(File file, double delta) {
                 log.info("【导入第三方软件源】进度 ID:{}，加载镜像文件：{}, 任务进度：{}%",
@@ -421,7 +419,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
                 long step = (long) (delta * 0.3 * progress.getTotal());
                 progress.setStep((progress.getStep() + step));
             }
-            
+
             @Override
             public void onEntryPush(LoadImageResult image, double delta) {
                 log.info("【导入第三方软件源】进度 ID:{}，推送镜像：{}, 任务进度：{}%",
@@ -429,7 +427,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
                 long step = (long) (delta * 0.4 * progress.getTotal());
                 progress.setStep((progress.getStep() + step));
             }
-            
+
             @Override
             public void onManifest(String imageId, double delta) {
                 log.info("【导入第三方软件源】进度 ID:{}，上传镜像 manifest: {}, 任务进度：{}%",
@@ -441,7 +439,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         log.info("【导入第三方软件源】进度 ID:{}，完成所有镜像推送操作", progress.getProgressId());
         progress.setStep(progress.getTotal());
         log.info("【导入第三方软件源】 进度ID:{}，上传镜像包成功", progress.getProgressId());
-        
+
         long total = vo.getFrameworks().stream()
                 .flatMap(f -> f.getK8sDdLServices().stream())
                 .mapToLong(s -> s.getCharts().size())
@@ -450,9 +448,9 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             progress.setState(7);
             progress.setTotal(total);
             progress.setStep(0);
-            
+
             HelmStorage helmStorage = StorageUtils.getHelmStorage();
-            
+
             vo.getFrameworks().forEach(frame -> {
                 frame.getK8sDdLServices().forEach(srv -> {
                     srv.getCharts().forEach(chart -> {
@@ -473,7 +471,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             log.info("【导入第三方软件源】 进度ID:{}，上传helm包成功", progress.getProgressId());
         }
     }
-    
+
     @Override
     public ImportCompProgressVO queryProgress(Integer progressId) {
         ImportCompProgressVO vo = importCmpMap.get(progressId);
@@ -483,7 +481,7 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
         }
         return vo;
     }
-    
+
     @Override
     public void clearProgressCache() {
         Set<Integer> keys = importCmpMap.keySet();
@@ -494,5 +492,5 @@ public class ExtRepoMetaServiceImpl implements ExtRepoMetaService {
             }
         }
     }
-    
+
 }
