@@ -53,8 +53,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
-import lombok.extern.slf4j.Slf4j;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
@@ -70,6 +68,7 @@ import cn.hutool.core.date.DatePattern;
 import cn.hutool.core.date.DateUtil;
 import cn.hutool.core.util.IdUtil;
 import cn.hutool.core.util.StrUtil;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * @author zhanghuangbin
@@ -78,35 +77,35 @@ import cn.hutool.core.util.StrUtil;
 @Slf4j
 @Transactional(rollbackFor = Exception.class)
 public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport implements K8sProductInstallService {
-    
+
     @Autowired
     private FrameK8sServiceService frameK8sServiceService;
-    
+
     @Autowired
     private K8sServiceInstanceValuesService k8sServiceInstanceValuesService;
-    
+
     @Autowired
     private K8sServiceInstanceService k8sServiceInstanceService;
-    
+
     @Autowired
     private ClusterK8sServiceCommandService k8sServiceCommandService;
-    
+
     @Autowired
     private TransactionalUtils transactionalUtils;
-    
+
     @Autowired
     private K8sClusterNamespaceService k8sClusterNamespaceService;
-    
+
     @Autowired
     private K8SDAGExecutor k8sDAGExecutor;
-    
+
     public static final String K8S_SERVICE_NAMESPACE_MAPPING = "k8s_service_namespace_mapping";
-    
+
     @Override
     public ValidateResultVO validateDeploymentModel(DeploymentModel model, DeploymentDTO dto) {
         List<String> errors = new ArrayList<>();
         List<DeploySrvModel> apps = getTargetApps(model);
-        
+
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(dto.getClusterId());
         List<FrameK8sServiceEntity> serviceList = frameK8sServiceService.getByFrameCode(clusterInfo.getClusterFrame());
         Map<String, FrameK8sServiceEntity> map = serviceList.stream().collect(Collectors.toMap(
@@ -119,7 +118,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
                 errors.add(String.format("服务%s %s不存在", app.getName(), app.getVersion()));
             }
         });
-        
+
         if (errors.isEmpty()) {
             ValidateResultVO vo = new ValidateResultVO();
             List<ValidateResultVO.DeployK8sServiceModel> services = new ArrayList<>();
@@ -139,17 +138,17 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             return new ValidateResultVO(errors);
         }
     }
-    
+
     @Override
     public InstallResult deploy(DeploymentDTO dto) {
         DeploymentModel model = doParseDeploymentFile(dto);
         log.debug("解析到配置\n：{}", JSON.toJSONString(model, JSONWriter.Feature.PrettyFormat));
         List<DeploySrvModel> apps = getTargetApps(model);
         log.info("完成解析部署文件，总共需要部署{}个应用", apps.size());
-        
+
         // 检查参数
         Map<String, K8sCommandNode> installContext = new HashMap<>();
-        
+
         // 检查服务的合法性
         List<FrameK8sServiceEntity> serviceList = frameK8sServiceService.listNewest(dto.getClusterId());
         Map<String, FrameK8sServiceEntity> srvDefMap = CollectionUtil.toMap(serviceList, new HashMap<>(), FrameK8sServiceEntity::getServiceName);
@@ -160,13 +159,13 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             } else if (!frameService.getServiceVersion().equals(srv.getVersion())) {
                 throw new RuntimeException(String.format("服务%s不是当前的最新版本", srv.getName()));
             }
-            
+
             K8sCommandNode node = new K8sCommandNode();
             node.setService(frameService);
             installContext.put(srv.getName(), node);
         });
         log.info("检验完成部署依赖成功, 可以部署...");
-        
+
         // 1. 保存 namespace 映射
         List<K8sProductDeployMapping> mappings = new ArrayList<>();
         apps.forEach(app -> {
@@ -175,11 +174,11 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             mapping.setNamespace(app.getNamespace());
             mapping.setMetaFileType(app.getMetaFileType().toLowerCase());
             mappings.add(mapping);
-            
+
             installContext.get(app.getName()).setMapping(mapping);
         });
         log.info("保存服务 namespace 映射成功，共{}个映射", mappings.size());
-        
+
         // 保存运行时变量
         mappings.forEach(mapping -> {
             K8sCommandNode node = installContext.get(mapping.getServiceName());
@@ -188,40 +187,40 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             values.setClusterId(dto.getClusterId());
             values.setNamespace(mapping.getNamespace());
             values.setServiceId(serviceId);
-            
+
             K8sServiceInstanceValuesVO content = k8sServiceInstanceValuesService.getValueFromRepo(serviceId, mapping.getMetaFileType());
             values.setValues(content.getValues());
             values.setDeltaValues(content.getDeltaValues());
             node.setValueId(saveConfigValues(values));
         });
         log.info("保存运行时变量成功，共{}个变量", mappings.size());
-        
+
         // 新增安装命令
         List<ClusterK8sServiceCommandEntity> commands = new ArrayList<>(apps.size());
         apps.forEach(srv -> {
             FrameK8sServiceEntity frameService = srvDefMap.get(srv.getName());
             ClusterK8sServiceCommandEntity cmd = doGenerateInstallCmd(dto.getClusterId(), srv.getNamespace(), frameService);
-            
+
             K8sCommandNode node = installContext.get(srv.getName());
             node.setCmd(cmd);
             commands.add(cmd);
         });
         log.info("保存 K8s 安装命令成功，共需要安装{}个应用", commands.size());
         DAG<String, K8sCommandNode, Integer> dag = new ServiceDAGBuilder<K8sCommandNode>().buildDeployDAG(new ArrayList<>(installContext.values()));
-        
+
         // 保存dag
-        List<String> commandIds = commands.stream().map(ClusterK8sServiceCommandEntity::getCommandId).collect(Collectors.toList());
+        List<String> commandIds = commands.stream().map(ClusterK8sServiceCommandEntity::getCommandId).toList();
         String dagId = saveDAG(dto.getClusterId(), "部署K8S制品", dag);
-        
+
         invokeCommands(dagId, false, commandIds);
         return new InstallResult(dagId);
     }
-    
+
     @Override
     public void redeploy(RunDagDto dto) {
         List<NodeDefinition> nodes = dagService.getNodesByDagId(dto.getDagId(), true);
         List<String> commandIds = new ArrayList<>();
-        
+
         K8sServiceNode srvNd = JSONObject.parseObject((String) nodes.get(0).getNodeConfig(), K8sServiceNode.class);
         if (Arrays.asList(CommandType.INSTALL_SERVICE, CommandType.UPGRADE_SERVICE).contains(srvNd.getCommandType())) {
             for (NodeDefinition node : nodes) {
@@ -238,16 +237,16 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
                 }
             }
         }
-        
+
         for (NodeDefinition node : nodes) {
             K8sServiceNode serviceNode = JSONObject.parseObject((String) node.getNodeConfig(), K8sServiceNode.class);
             commandIds.add(serviceNode.getCommandId());
         }
-        
+
         commandIds.forEach(cmd -> updateCommandState(cmd, CommandState.RUNNING, dto.isRestart()));
         invokeCommands(dto.getDagId(), dto.isRestart(), commandIds);
     }
-    
+
     private void updateNode(NodeDefinition node) {
         K8sServiceNode serviceNode = JSONObject.parseObject((String) node.getNodeConfig(), K8sServiceNode.class);
         serviceNode.setValueId(CacheUtils.getInteger(getValueCacheKey(serviceNode.getServiceName())));
@@ -255,12 +254,12 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
         node.setNodeConfig(JSONObject.toJSONString(serviceNode));
         dagService.updateNode(node);
     }
-    
+
     @Override
     public String generateGenericInstallCommand(Integer clusterId, List<String> serviceNames) {
         // 检查参数
         Map<String, K8sCommandNode> installContext = new HashMap<>();
-        
+
         List<FrameK8sServiceEntity> serviceList = frameK8sServiceService.listNewest(clusterId);
         Map<String, FrameK8sServiceEntity> srvDefMap = CollectionUtil.toMap(serviceList, new HashMap<>(), FrameK8sServiceEntity::getServiceName);
         serviceNames.forEach(serviceName -> {
@@ -268,12 +267,12 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             if (frameService == null) {
                 throw new RuntimeException(String.format("服务%s定义不存在", serviceName));
             }
-            
+
             K8sCommandNode node = new K8sCommandNode();
             node.setService(frameService);
             installContext.put(serviceName, node);
         });
-        
+
         ClusterInfoEntity cluster = clusterInfoService.getById(clusterId);
         String cacheKey = String.format("%s_%s", cluster.getClusterCode(), K8S_SERVICE_NAMESPACE_MAPPING);
         @SuppressWarnings("unchecked")
@@ -282,7 +281,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             throw new BusinessHintException("缓存已经失效，请刷新页面重试");
         }
         serviceNames.forEach(serviceName -> installContext.get(serviceName).setMapping(mappingMap.get(serviceName)));
-        
+
         serviceNames.forEach(serviceName -> {
             Integer valueId = (Integer) CacheUtils.get(getValueCacheKey(serviceName));
             if (valueId == null) {
@@ -290,7 +289,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             }
             installContext.get(serviceName).setValueId(valueId);
         });
-        
+
         List<ClusterK8sServiceCommandEntity> commands = new ArrayList<>(serviceNames.size());
         serviceNames.forEach(serviceName -> {
             K8sCommandNode node = installContext.get(serviceName);
@@ -303,19 +302,19 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
         DAG<String, K8sCommandNode, Integer> dag = new ServiceDAGBuilder<K8sCommandNode>().buildDeployDAG(new ArrayList<>(installContext.values()));
         // 保存dag
         String dagId = saveDAG(clusterId, "部署K8S制品", dag);
-        
-        List<String> commandIds = commands.stream().map(ClusterK8sServiceCommandEntity::getCommandId).collect(Collectors.toList());
+
+        List<String> commandIds = commands.stream().map(ClusterK8sServiceCommandEntity::getCommandId).toList();
         invokeCommands(dagId, false, commandIds);
         return dagId;
     }
-    
+
     @Override
     public String generateAndExecSrvInstCmd(Integer clusterId, CommandType commandType, List<Integer> serviceInstanceIds) {
         Map<Integer, K8sCommandNode> execContext = new HashMap<>();
         List<K8sServiceInstanceVO> instances = k8sServiceInstanceService.listByIds(serviceInstanceIds);
-        
+
         List<FrameK8sServiceEntity> serviceList = frameK8sServiceService.listByIds(
-                instances.stream().map(K8sServiceInstanceVO::getServiceId).collect(Collectors.toList()));
+                instances.stream().map(K8sServiceInstanceVO::getServiceId).toList());
         Map<Integer, FrameK8sServiceEntity> srvDefMap = CollectionUtil.toMap(serviceList, new HashMap<>(), FrameK8sServiceEntity::getId);
         instances.forEach(instance -> {
             FrameK8sServiceEntity frameService = srvDefMap.get(instance.getServiceId());
@@ -323,7 +322,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             node.setService(frameService);
             execContext.put(instance.getId(), node);
         });
-        
+
         List<ClusterK8sServiceCommandEntity> commands = new ArrayList<>(instances.size());
         instances.forEach(inst -> {
             K8sCommandNode node = execContext.get(inst.getId());
@@ -333,19 +332,19 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             commands.add(cmd);
         });
         log.info("保存 K8s {}命令成功，共需要安装{}个应用", commandType.getCommandName(Constants.CN), commands.size());
-        
+
         DAG<String, K8sCommandNode, Integer> dag = new ServiceDAGBuilder<K8sCommandNode>().buildDeployDAG(new ArrayList<>(execContext.values()));
         if (CommandType.STOP_SERVICE.equals(commandType)) {
             dag = dag.getReverseDag();
         }
-        
+
         String dagId = saveDAG(clusterId, commandType.getCommandName(Constants.CN), dag);
-        
-        List<String> commandIds = commands.stream().map(ClusterK8sServiceCommandEntity::getCommandId).collect(Collectors.toList());
+
+        List<String> commandIds = commands.stream().map(ClusterK8sServiceCommandEntity::getCommandId).toList();
         invokeCommands(dagId, false, commandIds);
         return dagId;
     }
-    
+
     @Override
     public List<FrameK8sServiceEntity> listNewestByDeployment(DeploymentDTO dto) {
         DeploymentModel model = doParseDeploymentFile(dto);
@@ -361,7 +360,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
         });
         return list;
     }
-    
+
     @Override
     public void saveServiceNamespaceMapping(Integer clusterId, List<K8sProductDeployMapping> mappings) {
         ClusterInfoEntity cluster = clusterInfoService.getById(clusterId);
@@ -373,30 +372,30 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             map.put(mapping.getServiceName(), mapping);
         }
     }
-    
+
     @Override
     public List<Integer> saveConfigValueList(List<K8sServiceInstanceValuesSaveDTO> list) {
-        return list.stream().map(this::saveConfigValues).collect(Collectors.toList());
+        return list.stream().map(this::saveConfigValues).toList();
     }
-    
+
     private Integer saveConfigValues(K8sServiceInstanceValuesSaveDTO dto) {
         FrameK8sServiceEntity service = frameK8sServiceService.getById(dto.getServiceId());
         K8sServiceInstanceValues values = k8sServiceInstanceValuesService.save(dto);
         CacheUtils.put(getValueCacheKey(service.getServiceName()), values.getId());
         return values.getId();
     }
-    
+
     private String getValueCacheKey(String serviceName) {
         return "k8sServiceValues_" + serviceName;
     }
-    
+
     private List<DeploySrvModel> getTargetApps(DeploymentModel model) {
         return model.getApp()
                 .stream()
                 .filter(app -> app.getDeployType().equalsIgnoreCase("K8S"))
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
     /**
      * 生成 K8s 服务安装命令
      */
@@ -407,13 +406,13 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
         // ns/instance 已查出，直接透传，避免 doGenerateExecCmd 再查一遍
         return doGenerateExecCmd(clusterId, type, frameService, ns, instance);
     }
-    
+
     private ClusterK8sServiceCommandEntity doGenerateExecCmd(Integer clusterId, String namespace, CommandType commandType, FrameK8sServiceEntity frameService) {
         K8sClusterNamespace ns = k8sClusterNamespaceService.getNamespace(new K8sNamespaceIdentityDTO(clusterId, namespace));
         K8sServiceInstance instance = k8sServiceInstanceService.createIfAbsent(clusterId, ns.getId(), frameService.getId());
         return doGenerateExecCmd(clusterId, commandType, frameService, ns, instance);
     }
-    
+
     private ClusterK8sServiceCommandEntity doGenerateExecCmd(Integer clusterId, CommandType commandType, FrameK8sServiceEntity frameService,
                                                              K8sClusterNamespace ns, K8sServiceInstance instance) {
         ClusterK8sServiceCommandEntity cmd = new ClusterK8sServiceCommandEntity();
@@ -432,7 +431,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
         log.info("保存 K8s 服务{}的{}命令成功，命令 ID:{}", frameService.getServiceName(), commandType.getCommandName(Constants.CN), cmd.getCommandId());
         return cmd;
     }
-    
+
     /**
      * 保存 DAG 定义
      */
@@ -444,10 +443,10 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             node.setNodeConfig(createNodeConfig(info));
             nodeMap.put(serviceName, node);
         });
-        
+
         DagDefinition definition = new DagDefinition();
         definition.setDagName(String.format("%s服务-%s", serviceActionName, DateUtil.format(new Date(), DatePattern.NORM_DATETIME_PATTERN)));
-        
+
         StringBuilder sb = new StringBuilder();
         sb.append(serviceActionName).append("服务:");
         dag.getNodes().forEach((srv, n) -> sb.append(srv).append(";"));
@@ -455,37 +454,37 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
         definition.setDescription(desc.length() > 300 ? desc.substring(0, 300) + "..." : desc);
         String dagId = dagService.saveDAG(clusterId, definition);
         dagService.saveNodes(dagId, new ArrayList<>(nodeMap.values()));
-        
+
         dag.getEdges().forEach(edge -> {
             NodeDefinitionEntity start = nodeMap.get(edge.getStart());
             NodeDefinitionEntity end = nodeMap.get(edge.getEnd());
             dagService.saveEdge(dagId, start, end);
         });
-        
+
         return dagId;
     }
-    
+
     private String createNodeConfig(K8sCommandNode info) {
         ClusterK8sServiceCommandEntity cmd = info.getCmd();
         FrameK8sServiceEntity service = info.getService();
-        
+
         K8sServiceNode node = new K8sServiceNode();
         node.setClusterId(cmd.getClusterId());
         node.setCommandId(cmd.getCommandId());
         node.setCommandType(CommandType.ofCode(cmd.getCommandType()));
-        
+
         node.setServiceName(service.getServiceName());
         node.setServiceInstanceId(cmd.getServiceInstanceId());
         node.setNamespace(cmd.getNamespace());
-        
+
         if (info.getMapping() != null) {
             node.setMetaFileType(info.getMapping().getMetaFileType());
         }
         node.setValueId(info.getValueId());
-        
+
         return JSONObject.toJSONString(node);
     }
-    
+
     /**
      * 调用 K8sDAGExecActor 执行命令
      */
@@ -509,7 +508,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
             }
         });
     }
-    
+
     /**
      * 更新命令状态
      */
@@ -522,7 +521,7 @@ public class K8SProductInstallServiceImpl extends ProductDeployHandlerSupport im
                 k8sServiceCommandService.updateById(cmd);
             }
         }
-        
+
         if (CommandState.RUNNING == state) {
             if (restart && cmd.getCommandState().equals(CommandState.SUCCESS)) {
                 return;
