@@ -41,7 +41,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -53,16 +52,16 @@ import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMapper, FrameServiceRoleEntity>
         implements
             FrameServiceRoleService {
-    
+
     @Autowired
     private ClusterInfoMapper clusterInfoMapper;
-    
+
     @Autowired
     private ClusterServiceRoleInstanceMapper roleInstanceMapper;
-    
+
     @Autowired
     private FrameServiceMapper frameServiceMapper;
-    
+
     @Override
     public List<FrameServiceRoleEntity> getServiceRoleList(Integer clusterId, List<Integer> serviceIds, Integer serviceRoleType) {
         List<FrameServiceRoleEntity> list = this.lambdaQuery()
@@ -73,7 +72,7 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
         // 校验是否已安装依赖的服务
         ClusterInfoEntity clusterInfo = clusterInfoMapper.selectById(clusterId);
         String key = clusterInfo.getClusterCode() + Constants.UNDERLINE + Constants.SERVICE_ROLE_HOST_MAPPING;
-        
+
         for (FrameServiceRoleEntity role : list) {
             FrameServiceEntity frameServiceEntity = frameServiceMapper.selectById(role.getServiceId());
             List<ClusterServiceRoleInstanceEntity> roleInstanceList =
@@ -82,7 +81,7 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
                             .eq(Constants.SERVICE_ROLE_NAME, role.getServiceRoleName())
                             .eq(Constants.CLUSTER_ID, clusterId));
             if (Objects.nonNull(roleInstanceList) && roleInstanceList.size() > 0) {
-                List<String> hosts = roleInstanceList.stream().map(e -> e.getHostname()).collect(Collectors.toList());
+                List<String> hosts = roleInstanceList.stream().map(e -> e.getHostname()).toList();
                 role.setHosts(hosts);
             } else if (CacheUtils.containsKey(key)) {
                 @SuppressWarnings("unchecked")
@@ -94,7 +93,7 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
         }
         return list;
     }
-    
+
     @Override
     public FrameServiceRoleEntity getServiceRoleByServiceIdAndServiceRoleName(Integer serviceId, String roleName) {
         return this.lambdaQuery()
@@ -102,14 +101,14 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
                 .eq(FrameServiceRoleEntity::getServiceRoleName, roleName)
                 .one();
     }
-    
+
     @Override
     public FrameServiceRoleEntity getServiceRoleByFrameCodeAndServiceRoleName(String clusterFrame,
                                                                               String serviceRoleName) {
         return this.getOne(new QueryWrapper<FrameServiceRoleEntity>()
                 .eq(Constants.FRAME_CODE_1, clusterFrame).eq(Constants.SERVICE_ROLE_NAME, serviceRoleName));
     }
-    
+
     @Override
     public Result getNonMasterRoleList(Integer clusterId, String serviceIds) {
         List<String> ids = Arrays.asList(serviceIds.split(","));
@@ -129,8 +128,8 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
                             .eq(Constants.SERVICE_ROLE_NAME, role.getServiceRoleName())
                             .eq(Constants.CLUSTER_ID, clusterId));
             if (!roleInstanceList.isEmpty()) {
-                hosts = roleInstanceList.stream().map(e -> e.getHostname()).collect(Collectors.toList());
-                
+                hosts = roleInstanceList.stream().map(e -> e.getHostname()).toList();
+
             } else if (CacheUtils.containsKey(key)) {
                 @SuppressWarnings("unchecked")
                 Map<String, List<String>> map = (Map<String, List<String>>) CacheUtils.get(key);
@@ -142,7 +141,7 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
         }
         return Result.success(list);
     }
-    
+
     @Override
     public Result getServiceRoleByServiceName(Integer clusterId, String serviceName) {
         if ("NODE".equals(serviceName)) {
@@ -161,7 +160,7 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
                 .list();
         return Result.success(list);
     }
-    
+
     @Override
     public List<FrameServiceRoleEntity> getAllServiceRoleList(Integer frameServiceId) {
         return this.lambdaQuery()
@@ -169,10 +168,10 @@ public class FrameServiceRoleServiceImpl extends ServiceImpl<FrameServiceRoleMap
                 .orderByAsc(FrameServiceRoleEntity::getSortNum)
                 .list();
     }
-    
+
     @Override
     public String getServiceName(String frameCode, String serviceRoleName) {
         return getBaseMapper().getServiceName(frameCode, serviceRoleName);
     }
-    
+
 }
