@@ -10,7 +10,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.expression.Expression;
 import org.springframework.expression.spel.standard.SpelExpressionParser;
@@ -26,23 +25,23 @@ import cn.hutool.core.util.StrUtil;
  * @author zhanghuangbin
  */
 public class HookUtils {
-    
+
     private static final Map<String, Class<? extends HookAction>> HOOK_MAP = new HashMap<>();
-    
+
     static {
         List<? extends HookAction> strategies = ServiceLoaderUtil.loadList(HookAction.class);
         for (HookAction strategy : strategies) {
             HOOK_MAP.put(strategy.getType(), strategy.getClass());
         }
     }
-    
+
     public static List<HookConfig> getMatchedHooks(List<HookConfig> hooks, HookType type) {
         if (CollectionUtil.isEmpty(hooks)) {
             return new ArrayList<>(0);
         }
-        return hooks.stream().filter(hook -> type.equals(hook.getType())).collect(Collectors.toList());
+        return hooks.stream().filter(hook -> type.equals(hook.getType())).toList();
     }
-    
+
     public static boolean isHookEnable(String condition, Map<String, Object> params) {
         if (StrUtil.isBlank(condition)) {
             return true;
@@ -54,7 +53,7 @@ public class HookUtils {
         Expression expr = parser.parseExpression(condition);
         return Boolean.TRUE.equals(expr.getValue(ctx, Boolean.class));
     }
-    
+
     public static HookContext createContext(HookConfig config, ServiceRoleResource resource, Map<String, String> global) {
         HookContext context = BeanUtil.toBean(config, HookContext.class);
         context.setServiceName(resource.getServiceName());
@@ -65,7 +64,7 @@ public class HookUtils {
         context.setPath(PkgInstallPathUtils.getInstallHome(resource));
         return context;
     }
-    
+
     public static ExecResult invokeHook(HookConfig cfg, HookContext ctx) throws Exception {
         Class<? extends HookAction> hookClass = HOOK_MAP.get(cfg.getAction());
         if (hookClass == null) {
